src/tests/integration/snapshots/zellij__tests__integration__basic__cannot_split_largest_terminal_when_there_is_no_room.snap
---
source: src/tests/integration/basic.rs
expression: snapshot_before_quit

---
line18-b
line19-b
prompt $
 █      
